Making sure the UI still runs. Using the JavaFX Maven plugin, skipping repackage on the client so it correctly builds and installs, and checking in the IntelliJ IDEA IML files so I can make sure the project settings are also versioned.

--- a/stock-client/pom.xml
+++ b/stock-client/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 	</properties>
 
 	<dependencies>
